src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-ofT-dwP0.25-dhU-b-wfsAN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AN\nconfig:\nwindow-rule {\n    open-maximized true\n    open-floating true\n    default-column-width { proportion 0.25; }\n    default-window-height {  }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 312 × 0, bounds: 1272 × 712, states: []

post-map configures:
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen]
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen, Activated]

unfullscreen configure:
size: 0 × 0, bounds: 1272 × 712, states: [Activated]
